[package]
name = "mina-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.19", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"
